See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.03.00

23.03.25 BJH  Release 11.02.00

              jpegtopnm: Add -traceexif

              pbmtextps: Add -asciihex, -ascii85.

              pcdovtoppm: remove dependency on obsolete 'tempfile' program.

              jpegtopnm: Many fixes to -dumpexif.  Always broken.
              (-dumpexif was new in Netpbm 9.18 (September 2001))

              pamtopng: fix -chroma option: always rejected.  Always broken.
              (pamtopng was new in Netpbm 10.70 (June 2015)).

              pnmtopng: fix -rgb option: always rejected.  Always broken
              (-rgb was new in Netpbm 10.30 (October 2005)).

              build: change the way you add the separately distributed
              'hpcdtoppm' code to the build.

22.12.31 BJH  Release 11.01.00

              pamcat: Add -listfile .

              pamtojpeg2k: add -size option.  Doesn't precisely work (and
              -compression has never worked precisely either); should be
              fixed some day.

              ppmtompeg: Fix crash with resize option because of invalid
              memory free.

              fitstopnm: fix invalid memory reference (nonterminated ASCIIZ
              string).

              packaging: Fix library minor number to 100 + Netpbm minor number
              so it is higher than previous ones in library major 100.
              I.e. libnetpbm.so.100.101 instead of libnetpbm.so.100.1.
              Introduced in Netpbm 11.00.00.

22.09.28 BJH  Release 11.00.00

              (No significance to new major number; just ran out of 2-digit
              minor numbers).

              Add pamcat.

              pamtable: add -tuple.

              pamtable: add -hex.

              pbmtextps: improve error messages.

              pnmtofits: fix arbitrary behavior when FITS input lacks